--- a/style.css
+++ b/style.css
@@ -114,7 +114,8 @@ header {
 .slide {
   width: 100%;
   height: 300px;
-  object-fit: cover;
+  object-fit: contain;
+  background-color: rgb(146, 88, 0); 
   flex-shrink: 0;
 }
 
