--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ header {
 
 .slider {
   display: flex;
-  animation: slide 36s linear infinite;
+  animation: slide 60s linear infinite;
   width: calc(100% * 12);
 }
 
@@ -115,7 +115,7 @@ header {
   width: 100%;
   height: 300px;
   object-fit: contain;
-  background-color: var(--cream); /* para que no se vea feo el fondo */
+  background-color: rgb(116, 69, 0); /* para que no se vea feo el fondo */
   flex-shrink: 0;
 }
 
