--- a/style.css
+++ b/style.css
@@ -107,8 +107,8 @@ header {
 
 .slider {
   display: flex;
+  width: 1200%; /* 100% x 12 imágenes */
   animation: slide 45s linear infinite;
-  width: calc(100% * 12);
 }
 
 .slide {
