--- a/style.css
+++ b/style.css
@@ -107,12 +107,13 @@ header {
 
 .slider {
   display: flex;
-  width: 600%; /* 50% x 12 imágenes */
-  animation: slide 30s linear infinite;
+  width: 1200%; /* 12 imágenes x 100% */
+  animation: slide 36s ease-in-out infinite;
 }
 
+
 .slide {
-  width: 50%;
+  width: 100%;
   height: 300px;
   object-fit: contain;
   background-color: rgb(116, 69, 0);
@@ -134,7 +135,6 @@ header {
   91.66% { transform: translateX(-1100%); }
   100%   { transform: translateX(0); }
 }
-
 
 
 .catalogo {
