--- a/style.css
+++ b/style.css
@@ -326,48 +326,46 @@ button:focus {
   }
 
   .slider {
-    width: calc(12 * 100%);
+    display: flex;
+    width: 1200%; /* 12 imágenes x 100% */
     animation: slideMobile 36s ease-in-out infinite;
   }
 }
 
 @keyframes slideMobile {
   0%   { transform: translateX(0%); }
-  6%   { transform: translateX(0%); }
+  8.33%  { transform: translateX(0%); }
 
-  8%   { transform: translateX(-100%); }
-  14%  { transform: translateX(-100%); }
+  8.34%  { transform: translateX(-100%); }
+  16.66% { transform: translateX(-100%); }
 
-  16%  { transform: translateX(-200%); }
-  22%  { transform: translateX(-200%); }
+  16.67% { transform: translateX(-200%); }
+  25%    { transform: translateX(-200%); }
 
-  24%  { transform: translateX(-300%); }
-  30%  { transform: translateX(-300%); }
+  25.01% { transform: translateX(-300%); }
+  33.33% { transform: translateX(-300%); }
 
-  32%  { transform: translateX(-400%); }
-  38%  { transform: translateX(-400%); }
+  33.34% { transform: translateX(-400%); }
+  41.66% { transform: translateX(-400%); }
 
-  40%  { transform: translateX(-500%); }
-  46%  { transform: translateX(-500%); }
+  41.67% { transform: translateX(-500%); }
+  50%    { transform: translateX(-500%); }
 
-  48%  { transform: translateX(-600%); }
-  54%  { transform: translateX(-600%); }
+  50.01% { transform: translateX(-600%); }
+  58.33% { transform: translateX(-600%); }
 
-  56%  { transform: translateX(-700%); }
-  62%  { transform: translateX(-700%); }
+  58.34% { transform: translateX(-700%); }
+  66.66% { transform: translateX(-700%); }
 
-  64%  { transform: translateX(-800%); }
-  70%  { transform: translateX(-800%); }
+  66.67% { transform: translateX(-800%); }
+  75%    { transform: translateX(-800%); }
 
-  72%  { transform: translateX(-900%); }
-  78%  { transform: translateX(-900%); }
+  75.01% { transform: translateX(-900%); }
+  83.33% { transform: translateX(-900%); }
 
-  80%  { transform: translateX(-1000%); }
-  86%  { transform: translateX(-1000%); }
+  83.34% { transform: translateX(-1000%); }
+  91.66% { transform: translateX(-1000%); }
 
-  88%  { transform: translateX(-1100%); }
-  94%  { transform: translateX(-1100%); }
-
-  96%  { transform: translateX(-1200%); }
-  100% { transform: translateX(0); }
+  91.67% { transform: translateX(-1100%); }
+  100%   { transform: translateX(-1100%); }
 }
