--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ header {
 .slide {
   width: 100%; /* Cada imagen ocupa todo el carrusel */
   height: 300px;
-  object-fit: cover;
+  object-fit: contain;
   flex-shrink: 0;
 }
 
