--- a/style.css
+++ b/style.css
@@ -213,20 +213,16 @@ header {
 
 
 .slider {
-
   display: flex;
-
-  width: calc(12 * 100%); /* para movil */
-
+  width: calc(100% * 12); /* ✅ así sí se suman 12 imágenes al 100% cada una */
   animation: slide 36s ease-in-out infinite;
-
 }
 
 
 
 .slide {
 
-  width: 8.3333%;
+   width: 100%;
 
   height: 300px;
 
