--- a/style.css
+++ b/style.css
@@ -631,7 +631,7 @@ button:focus {
   .slider {
     display: flex;
     width: calc(100% * 12);
-    animation: slideMobile 96s linear infinite;
+    animation: slideMobile 96s steps(12, end) infinite;
   }
 
   .slide {
@@ -642,18 +642,7 @@ button:focus {
   }
 
   @keyframes slideMobile {
-    0%     { transform: translateX(0%); }
-    8.33%  { transform: translateX(-100%); }
-    16.66% { transform: translateX(-200%); }
-    25%    { transform: translateX(-300%); }
-    33.33% { transform: translateX(-400%); }
-    41.66% { transform: translateX(-500%); }
-    50%    { transform: translateX(-600%); }
-    58.33% { transform: translateX(-700%); }
-    66.66% { transform: translateX(-800%); }
-    75%    { transform: translateX(-900%); }
-    83.33% { transform: translateX(-1000%); }
-    91.66% { transform: translateX(-1100%); }
-    100%   { transform: translateX(0%); }
+    0% { transform: translateX(0%); }
+    100% { transform: translateX(-1100%); }
   }
 }
